--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
   },
   "dependencies": {
     "body-parser": "~1.8.1",
+    "expect": "^1.20.2",
     "express": "~4.9.0",
     "koa": "2.1.0",
+    "koa-route": "^3.2.0",
+    "mocha": "^3.2.0",
     "morgan": "~1.3.0",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "supertest": "^3.0.0"
   }
 }
