--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "node": ">=7.6.0"
   },
   "scripts": {
-    "start": "nodemon app.js"
+    "test": "mocha test.js"
   },
   "dependencies": {
     "body-parser": "~1.8.1",
